syntax = "proto3";
option go_package = "./;pb";

// 题目基础信息
message Problem{
  int64 id = 1;
  string create_at = 2;
  string delete_at = 3;

  string title = 4;
  string description = 5;
  int32 level = 6;
  repeated string tags = 7;
  int64 create_by = 8;

  int32 status = 10; // 是否发布
}
// 题目配置信息
message ProblemConfig{
  int64 id = 1;
  int32 level = 2;
  string name = 3;
  Limit compile_limit = 4;
  Limit run_limit = 5;
  repeated TestCase test_cases = 6;
}
message Limit{
  int64 cpu_limit = 1;
  int64 clock_limit = 2;
  int64 memory_limit = 3;
  int64 stack_limit = 4;
  int64 proc_limit = 5;
}
message TestCase{
  string input = 1;
  string output = 2;
}

// “提交”状态枚举，如果没有查询到状态，就意味着最近没有提交题目or题目提交过期了
enum SubmitState{
  UPStateNormal = 0;        // 初始状态
  UPStateCompiling = 1;     // 正在编译
  UPStateJudging = 2;       // 已编译成功，正在判题
  UPStateExited = 3;        // 已退出 -> 如何查询到这个状态，意味着可以查询结果了
}

message SubmitForm{
  int64 problem_id = 1;
  string title = 2;
  string lang = 3;
  string code = 4;
  int64 uid = 5;
  string user_name = 6;
  string problem_name = 7;
}

message PBResult{
  // api返回字段
  string status = 1;
  string err_msg = 2;                // 详细错误信息
  int64 exitStatus = 3;              // 程序返回值
  int64 time = 4;                    // 程序运行 CPU 时间，单位纳秒
  int64 memory = 5;                  // 程序运行内存，单位 byte
  int64 runTime = 6;                 // 程序运行现实时间，单位纳秒
  // 其他字段
  string content = 7;
  TestCase testCase = 8;
}